--- a/static/customize-nu-me/index.html
+++ b/static/customize-nu-me/index.html
@@ -4,7 +4,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>LANDING PAGE 1 COLLECTION</title>
+    <title>nu me = nutrition for women | 2020</title>
     <style type="text/css">
       html {
         margin: 0;
